--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -236,6 +236,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:text="text"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
@@ -262,13 +263,15 @@
 
                     <TextView
                         android:id="@+id/subscriptiontext"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Active until"
+                        android:layout_marginEnd="8dp"
+                        android:text="@string/active_until"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:visibility="visible"
+                        app:layout_constraintEnd_toEndOf="@id/gl2"
                         app:layout_constraintBaseline_toBaselineOf="@id/subscription"
                         app:layout_constraintStart_toEndOf="@id/subscription" />
 
