--- a/app/src/main/res/layout/activity_edit_part.xml
+++ b/app/src/main/res/layout/activity_edit_part.xml
@@ -15,7 +15,7 @@
         android:paddingStart="52dp"
         android:paddingTop="10dp"
         android:paddingBottom="1dp"
-        android:text="@string/part_details"
+        android:text="@string/edit_part"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="32sp"
         android:textStyle="bold"
