--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -145,7 +145,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="@string/email"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
@@ -169,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="@string/location_prof"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
@@ -193,7 +193,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="@string/phone"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
@@ -310,7 +310,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="25dp"
                         android:text="@string/biography"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
@@ -325,10 +325,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="30dp"
                         android:text="@string/def_bio"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintBaseline_toBaselineOf="@id/biography"
                         app:layout_constraintEnd_toEndOf="@id/gl2"
                         app:layout_constraintStart_toEndOf="@id/biography" />
