--- a/app/src/main/res/layout/row_manage_parts.xml
+++ b/app/src/main/res/layout/row_manage_parts.xml
@@ -82,6 +82,7 @@
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="10dp"
                 android:text="Year"
+                android:gravity="left"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginStart="15dp"
@@ -98,6 +99,7 @@
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="10dp"
                 android:text="Model"
+                android:gravity="left"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/colorPrimaryDark"
