--- a/app/src/main/res/layout/row_parts.xml
+++ b/app/src/main/res/layout/row_parts.xml
@@ -84,6 +84,7 @@
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="10dp"
                 android:text="Year"
+                android:gravity="left"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginStart="15dp"
@@ -100,6 +101,7 @@
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="10dp"
                 android:text="Model"
+                android:gravity="left"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/colorPrimaryDark"
