--- a/app/src/main/res/layout/fragment_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_diagnostics.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.Fragments.DiagnosticsFragment"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    tools:context=".View.Fragments.DiagnosticsFragment">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/importData"
         style="@style/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="70dp"
         android:text="@string/import_car_s_diagnostics"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/carDataFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/carDataFilter"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="10dp"
         android:elevation="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/importData"
+        android:src="@drawable/ic_filter"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_filter"/>
+        app:layout_constraintStart_toEndOf="@id/importData"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/carDataCardFilter"
@@ -64,9 +64,9 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/dayFilterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayFilterText"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:text="@string/day"
@@ -80,8 +80,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
                 android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/dayFilterText"
@@ -89,9 +89,9 @@
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
             <TextView
+                android:id="@+id/monthFilterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/monthFilterText"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:text="@string/month"
@@ -105,8 +105,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
                 android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/monthFilterText"
@@ -114,9 +114,9 @@
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
             <TextView
+                android:id="@+id/yearFilterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/yearFilterText"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:text="@string/car_data_year"
@@ -130,8 +130,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
                 android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/yearFilterText"
@@ -139,9 +139,9 @@
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
             <TextView
+                android:id="@+id/hourFilterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/hourFilterText"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:text="@string/hour"
@@ -155,8 +155,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
                 android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/hourFilterText"
@@ -186,45 +186,71 @@
         android:layout_marginTop="10dp"
         android:divider="@color/transparent"
         android:dividerHeight="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status_text_id" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:progressTint="@color/themeColor"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ipUserInput" />
 
-    <TextView
-        android:id="@+id/status_text_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/status"
-        android:visibility="visible"
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progress_bar_id"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:progressTint="@color/themeColor"-->
+<!--        android:visibility="gone"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/status_text_id"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="@dimen/loginViewsMargin"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="@dimen/loginViewsMargin"-->
+<!--        android:text="@string/status"-->
+<!--        android:visibility="visible"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/importData" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/status_text"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="@dimen/loginViewsMargin"-->
+<!--        android:text="..."-->
+<!--        android:visibility="visible"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@id/status_text_id"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/importData" />-->
+
+    <EditText
+        android:id="@+id/ipServerInput"
+        style="@style/modifiedEditText"
+        android:hint="@string/enter_ip"
+        android:inputType="text"
+        android:maxLines="1"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="@dimen/loginViewsMargin"
-        android:layout_marginEnd="@dimen/loginViewsMargin"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/importData" />
 
-    <TextView
-        android:id="@+id/status_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="..."
-        android:visibility="visible"
+    <EditText
+        android:id="@+id/ipUserInput"
+        style="@style/modifiedEditText"
+        android:hint="@string/bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4"
+        android:inputType="text"
+        android:maxLines="1"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="@dimen/loginViewsMargin"
-        app:layout_constraintStart_toEndOf="@id/status_text_id"
-        app:layout_constraintTop_toBottomOf="@id/importData"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ipServerInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
