--- a/app/src/main/res/layout/fragment_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_diagnostics.xml
@@ -83,7 +83,6 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
-                android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/dayFilterText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
@@ -108,7 +107,6 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
-                android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/monthFilterText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
@@ -133,7 +131,6 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
-                android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/yearFilterText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
@@ -158,7 +155,6 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/themeColor"
-                android:entries="@array/spinner"
                 app:layout_constraintBaseline_toBaselineOf="@id/hourFilterText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/monthFilterText" />
@@ -180,7 +176,7 @@
     </androidx.cardview.widget.CardView>
 
     <ListView
-        android:id="@+id/mechanicsListView"
+        android:id="@+id/dataListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
