--- a/app/src/main/res/layout/activity_view_data.xml
+++ b/app/src/main/res/layout/activity_view_data.xml
@@ -9,7 +9,7 @@
     tools:context=".View.Activities.ViewDataActivity">
 
     <TextView
-        android:id="@+id/pr_title"
+        android:id="@+id/reportTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
@@ -32,9 +32,9 @@
         android:backgroundTint="@color/colorAccent"
         android:elevation="2dp"
         android:src="@drawable/ic_back_en"
-        app:layout_constraintBottom_toBottomOf="@id/pr_title"
-        app:layout_constraintStart_toStartOf="@id/pr_title"
-        app:layout_constraintTop_toTopOf="@id/pr_title"
+        app:layout_constraintBottom_toBottomOf="@id/reportTitle"
+        app:layout_constraintStart_toStartOf="@id/reportTitle"
+        app:layout_constraintTop_toTopOf="@id/reportTitle"
         app:layout_constraintVertical_bias="1.0" />
 
 
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pr_title">
+        app:layout_constraintTop_toBottomOf="@id/reportTitle">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -55,7 +55,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/darkTextColor"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
